concord_macros/tests/trybuild/fail/codegen/reserved_sse_arity_three.stderr
error: reserved endpoint I/O family `Sse` expects one or two type arguments
  --> tests/trybuild/fail/codegen/reserved_sse_arity_three.rs:10:12
   |
10 |         -> Sse<A, B, C>
   |            ^^^^^^^^^^^^
